kubernetes/apps/kubeflow-system/kubeflow/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow
  namespace: kubeflow
spec:
  hostnames: ["kubeflow.goyangi.cloud"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: istio-ingressgateway
          namespace: istio-system
          port: 8080
